<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      
    <modelVersion>4.0.0</modelVersion>
      
    <groupId>dmk.jfxamd</groupId>
    <artifactId>javafx-animation-material-design</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
      
    <name>* JavaFX - Animation And Material Design Course *</name>
      
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.version>3.10.1</maven.compiler.version>
                
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- JAVA FX -->            
        <javafx.version>18</javafx.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <!--<jfoenix.version>9.0.10</jfoenix.version>-->
        <materialfx.version>11.13.4</materialfx.version>
        
        <!-- Utils -->
        <projectlombok.version>1.18.20</projectlombok.version>
        <slf4j.version>1.7.32</slf4j.version>
    </properties>
      
    <dependencyManagement>
        <dependencies>
            <!-- Java FX -->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <!-- Old Google Material Design. There are problems with new Java versions -->
<!--            <dependency>
                <groupId>com.jfoenix</groupId>
                <artifactId>jfoenix</artifactId>
                <version>${jfoenix.version}</version>
            </dependency>-->
            <!--New Google's material design. In description successor to JFoenix library-->
            <dependency>
                <groupId>io.github.palexdev</groupId>
                <artifactId>materialfx</artifactId>
                <version>${materialfx.version}</version>
            </dependency>
            
            <!-- Utils -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${projectlombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
      
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
        </dependency>
    </dependencies>
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>${javafx.plugin.version}</version>
                    <configuration>
                        <mainClass>${main.class}</mainClass>
                    </configuration>
                    <executions>
                        <execution>
                            <!-- Default configuration for running -->
                            <!-- Usage: mvn clean javafx:run -->
                            <id>default-cli</id>
                            <configuration>
                                <options>
                                    <option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
                                </options>
                            </configuration>
                        </execution>
                        <execution>
                            <!-- Configuration for manual attach debugging -->
                            <!-- Usage: mvn clean javafx:run@debug -->
                            <id>debug</id>
                            <configuration>
                                <options>
                                    <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                                </options>
                            </configuration>
                        </execution>
                        <execution>
                            <!-- Configuration for automatic IDE debugging -->
                            <id>ide-debug</id>
                            <configuration>
                                <options>
                                    <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                </options>
                            </configuration>
                        </execution>
                        <execution>
                            <!-- Configuration for automatic IDE profiling -->
                            <id>ide-profile</id>
                            <configuration>
                                <options>
                                    <option>${profiler.jvmargs.arg1}</option>
                                    <option>${profiler.jvmargs.arg2}</option>
                                    <option>${profiler.jvmargs.arg3}</option>
                                    <option>${profiler.jvmargs.arg4}</option>
                                    <option>${profiler.jvmargs.arg5}</option>
                                </options>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
  
    <modules>
        <module>sec-03-basics</module>
        <module>sec-04-login-simple</module>
    </modules>
</project>
